crates/smart-config/tests/ui/derives/bogus_alias_name.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
struct TestConfig {
    #[config(alias = "what?")]
    field: u64,
}

fn main() {}
